--- a/Code/Debug/Makefile
+++ b/Code/Debug/Makefile
@@ -40,10 +40,9 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../Include/Src/ADC.c \
 ../Include/Src/LCD.c \
-../Include/Src/Timer.c \
-../Include/Src/Sensor.c \
+../Include/Src/DS18B20.c \
+../Include/Src/mystr.c \
 ../main.c
 
 
@@ -54,31 +53,27 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-Include/Src/ADC.o \
 Include/Src/LCD.o \
-Include/Src/Timer.o \
-Include/Src/Sensor.o \
+Include/Src/DS18B20.o \
+Include/Src/mystr.o \
 main.o
 
 OBJS_AS_ARGS +=  \
-Include/Src/ADC.o \
 Include/Src/LCD.o \
-Include/Src/Timer.o \
-Include/Src/Sensor.o \
+Include/Src/DS18B20.o \
+Include/Src/mystr.o \
 main.o
 
 C_DEPS +=  \
-Include/Src/ADC.d \
 Include/Src/LCD.d \
-Include/Src/Timer.d \
-Include/Src/Sensor.d \
+Include/Src/DS18B20.d \
+Include/Src/mystr.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
-Include/Src/ADC.d \
 Include/Src/LCD.d \
-Include/Src/Timer.d \
-Include/Src/Sensor.d \
+Include/Src/DS18B20.d \
+Include/Src/mystr.d \
 main.d
 
 OUTPUT_FILE_PATH +=Project.elf
@@ -95,13 +90,6 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
-Include/Src/ADC.o: ../Include/Src/ADC.c
-	@echo Building file: $<
-	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega16 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega16" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
 Include/Src/LCD.o: ../Include/Src/LCD.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -109,14 +97,14 @@ Include/Src/LCD.o: ../Include/Src/LCD.c
 	@echo Finished building: $<
 	
 
-Include/Src/Timer.o: ../Include/Src/Timer.c
+Include/Src/DS18B20.o: ../Include/Src/DS18B20.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega16 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega16" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
-Include/Src/Sensor.o: ../Include/Src/Sensor.c
+Include/Src/mystr.o: ../Include/Src/mystr.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega16 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega16" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
